@@ -31,7 +31,6 @@ public class SemanticAnalyzerFactory {
       case HiveParser.TOK_EXPLAIN: return new ExplainSemanticAnalyzer(conf);
       case HiveParser.TOK_LOAD: return new LoadSemanticAnalyzer(conf);
       case HiveParser.TOK_CREATETABLE: 
-      case HiveParser.TOK_CREATEEXTTABLE: 
       case HiveParser.TOK_DROPTABLE: 
       case HiveParser.TOK_DESCTABLE: 
       case HiveParser.TOK_MSCK:
